--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -30,7 +30,7 @@
           matInput
           type="Email"
           placeholder="Ex. Moshe@gmail.com"
-          formControlName="email"
+          formControlName="EmailAddress"
         />
       </mat-form-field>
       <mat-form-field appearance="outline">
