--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,13 +21,13 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let row">{{ row.id }}</td>
       </ng-container>
-      <ng-container matColumnDef="firstName">
+      <ng-container matColumnDef="first_Name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>firstName</th>
-        <td mat-cell *matCellDef="let row">{{ row.firstName}}</td>
+        <td mat-cell *matCellDef="let row">{{ row.first_Name}}</td>
       </ng-container>
-      <ng-container matColumnDef="lastName">
+      <ng-container matColumnDef="last_Name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>lastName</th>
-        <td mat-cell *matCellDef="let row">{{ row.lastName }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.last_Name }}</td>
       </ng-container>
       <ng-container matColumnDef="phoneNo">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>PhoneNo</th>
