--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
 <span ><button  mat-stroked-button color="primary" routerLink="/units">Units</button></span>
 <span ><button  mat-stroked-button color="primary" routerLink="/users">Users</button></span>
 <span ><button  mat-stroked-button color="primary" routerLink="/hosList">רשימת מאושפים פר מחלקה</button></span>
+<span ><button  mat-stroked-button color="primary" routerLink="/chart"> charts</button></span>
 
 </div>
 
