--- a/src/app/hos-list/hos-list.component.html
+++ b/src/app/hos-list/hos-list.component.html
@@ -70,3 +70,4 @@
     </div>
   </div>
 
+  <button (click)="exportToExcel(dataSource.filteredData, 'test')" mat-raised-button color="primary">Excel- Full Report</button>
