--- a/src/app/units/units.component.html
+++ b/src/app/units/units.component.html
@@ -67,4 +67,8 @@
   </div>
 </div>
 
-<button (click)="convertExcel()" mat-raised-button color="primary">Excel</button>
+<!-- <button (click)="convertExcel()" mat-raised-button color="primary">Excel</button> -->
+
+<button (click)="exportToExcel(dataSource.filteredData, 'test')" mat-raised-button color="primary">Excel- Full Report</button>
+
+
