--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -63,3 +63,6 @@
       ></mat-paginator>
     </div>
   </div>
+
+  <button (click)="exportToExcel(dataSource.filteredData, 'test')" mat-raised-button color="primary">Excel- Full Report</button>
+  
