--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,14 @@
 .example-spacer {
   flex: 1 1 auto;
   justify-content: center;
+  background: #1976d2;
 }
 
-
-.main-body {
-  padding-top: 20px;
+.body {
   margin: 0 auto;
-  max-width: 1248px;
+  //max-width: 1248px;
   mat-form-field {
     width: 100%;
   }
+  padding: 50px;
 }
-
