--- a/src/app/hos-list/hos-list.component.html
+++ b/src/app/hos-list/hos-list.component.html
@@ -1,29 +1,28 @@
-
-
-
 <div class="main-body">
-    <mat-form-field>
-      <mat-label>Filter</mat-label>
-      <input
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
-        #input
-      />
-    </mat-form-field>
-  
-    <div class="talbe-container">
-      <table mat-table [dataSource]="dataSource" matSort>
-        <!-- ID Column -->
-        <ng-container matColumnDef="departName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
-          <td mat-cell *matCellDef="let row">{{ row.departName }}</td>
-        </ng-container>
-        <ng-container matColumnDef="totalHos">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> רשימת מאושפזים</th>
-            <td mat-cell *matCellDef="let row">{{ row.totalHos }}</td>
-          </ng-container>
-        <!-- <ng-container matColumnDef="phone">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex. Mia"
+      #input
+    />
+  </mat-form-field>
+
+  <div class="talbe-container">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- ID Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מחלקה</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      </ng-container>
+      <ng-container matColumnDef="admission_No">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          רשימת מאושפזים
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row.admission_No }}</td>
+      </ng-container>
+      <!-- <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>טלפון יחידה</th>
           <td mat-cell *matCellDef="let row">{{ row.phone }}</td>
         </ng-container>
@@ -31,7 +30,7 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>אחות אחראית</th>
           <td mat-cell *matCellDef="let row">{{ row.head_Nurse }}</td>
         </ng-container> -->
-        <!-- <ng-container matColumnDef="sector">
+      <!-- <ng-container matColumnDef="sector">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>sector code</th>
           <td mat-cell *matCellDef="let row">{{ row.sector }}</td>
         </ng-container>
@@ -51,23 +50,29 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>profile_Code</th>
           <td mat-cell *matCellDef="let row">{{ row.profile_Code }}</td>
         </ng-container> -->
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  
-        Row shown when there is no matching data.
-        <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">
-            No data matching the filter "{{ input.value }}"
-          </td>
-        </tr>
-      </table>
-  
-      <mat-paginator
-        [pageSizeOptions]="[10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
-    </div>
-  </div>
 
-  <button (click)="exportToExcel(dataSource.filteredData, 'test')" mat-raised-button color="primary">Excel- Full Report</button>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      Row shown when there is no matching data.
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          No data matching the filter "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
+</div>
+
+<button
+  (click)="exportToExcel(dataSource.filteredData, 'test')"
+  mat-raised-button
+  color="primary"
+>
+  Excel- Full Report
+</button>
