--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,10 +43,15 @@
     </button></span
   >
   <span
-  ><button mat-stroked-button color="primary" routerLink="/Consiliums">
-    ייעוצים
-  </button></span
->
+    ><button mat-stroked-button color="primary" routerLink="/Consiliums">
+      ייעוצים
+    </button></span
+  >
+  <span
+    ><button mat-stroked-button color="primary" routerLink="/Quality_National">
+      מדדי איכות
+    </button></span
+  >
 </div>
 
 <div class="body">
