--- a/src/app/isolation/isolation.component.html
+++ b/src/app/isolation/isolation.component.html
@@ -8,10 +8,10 @@
     </mat-form-field>
   </ng-container>
 
-  <div class="global-filter" >
-    <mat-form-field appearance="outline" >
-      <mat-label class="filters" style="color: blue;">Global Filter</mat-label>
-      <input matInput [formControlName]="'globalFilter'" />
+  <div class="global-filter">
+    <mat-form-field appearance="outline" class="long-search-bar">
+      <mat-label class="filters" style="color: blue;">חיפוש</mat-label>
+      <input matInput [formControlName]="'globalFilter'" class="search-input" />
     </mat-form-field>
   </div>
   
