--- a/src/app/isolation/isolation.component.scss
+++ b/src/app/isolation/isolation.component.scss
@@ -18,6 +18,18 @@
 }
 
 
+.global-filter {
+  width: 100%; /* Set the width of the container to 100% */
+}
+
+.long-search-bar {
+  width: 100%; /* Set the width of the form field to 100% */
+}
+
+.search-input {
+  width: 100%; /* Set the width of the input field to 100% */
+}
+
 /* Add this to your isolation.component.scss file */
 
 .global-filter {
