--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       mat-fab
       color="warn"
       aria-label="Example icon button with a home icon"
-      routerLink="/"
+      routerLink="/sql"
     >
       <mat-icon>home</mat-icon>
     </button>
@@ -16,7 +16,7 @@
   <!-- <button mat-raised-button (click)="openAddEditEmpForm()">Add Employee</button> -->
 </mat-toolbar>
 
-<div class="body">
+<!-- <div class="body">
   <span
     ><button mat-stroked-button color="primary" routerLink="/units">
       Units
@@ -52,7 +52,7 @@
       מדדי איכות
     </button></span
   >
-</div>
+</div> -->
 
 <div class="body">
   <router-outlet></router-outlet>
