--- a/src/app/sql/sql.component.html
+++ b/src/app/sql/sql.component.html
@@ -1,18 +1,20 @@
 <!-- Cards with media area -->
 
 <div class="body">
-<mat-form-field appearance="outline" class="dept">
-  <mat-label>מחלקה</mat-label>
-  <mat-select  (selectionChange)="someMethod($event.value)" disableRipple>
-    <mat-option value="משה">משה</mat-option>
-    <mat-option value="ריאות">ריאות</mat-option>
-    <mat-option value="בידודים">בידוד</mat-option>
-    <mat-option value="ריק">ריק</mat-option>
-    <mat-option value="הכל">הכל</mat-option>
-  </mat-select>
-</mat-form-field>
+  <mat-form-field appearance="outline" class="dept">
+    <mat-label>מחלקה</mat-label>
+    <mat-select (selectionChange)="someMethod($event.value)" disableRipple>
+      <mat-option value="הכל">הכל</mat-option>
+      <mat-option value="משה">משה</mat-option>
+      <mat-option value="ריאות">ריאות</mat-option>
+      <mat-option value="היחידה למניעת זיהומים"
+        >היחידה למניעת זיהומים</mat-option
+      >
+      <!-- <mat-option value="ריק">ריק</mat-option> -->
+    </mat-select>
+  </mat-form-field>
 
-<!-- <div class="col-md-12 no-padding">
+  <!-- <div class="col-md-12 no-padding">
   <label>Reply Type</label>
 
   <select (change)="onChange($event)" formControlName="replytype" class="form-control select2" type="text" style="width: 100%;">
@@ -21,56 +23,94 @@
   </select>
 </div> -->
 
-<div class="card-container">
-  <div
-    class="card"
-    *ngIf="selectionChange === 'ריאות' || selectionChange === 'הכל'"
-  >
-    <mat-card class="example-card">
-      <mat-card-header>
-        <mat-card-title-group>
-          <mat-card-title>ברוכנסקופיה</mat-card-title>
-          <mat-card-subtitle>דר נזאל</mat-card-subtitle>
-        </mat-card-title-group>
-      </mat-card-header>
-      <mat-card-content>
-        דוח מטופלים שעברו ברכונסקופיה במרפאה
-      </mat-card-content>
-      <button mat-button class="button">להרצת הדוח</button>
-    </mat-card>
-  </div>
+  <div class="card-container">
+    <div
+      class="card"
+      *ngIf="selectionChange === 'ריאות' || selectionChange === 'הכל'"
+    >
+      <mat-card class="example-card">
+        <mat-card-header>
+          <mat-card-title-group>
+            <mat-card-title>ברוכנסקופיה</mat-card-title>
+            <mat-card-subtitle>דר נזאל</mat-card-subtitle>
+          </mat-card-title-group>
+        </mat-card-header>
+        <mat-card-content>
+          דוח מטופלים שעברו ברכונסקופיה במרפאה
+        </mat-card-content>
+        <button mat-button class="button">להרצת הדוח</button>
+      </mat-card>
+    </div>
 
-  <div class="card" *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'">
-    <mat-card>
-      <mat-card-title class="title1">רשימת עובדים פר סקטור</mat-card-title>
-      <mat-card-subtitle class="title1"> מבקש הדוח: משה ממן</mat-card-subtitle>
-      <mat-card-content>
-        דוח להצגת כמות עובדים פר סקטור +שורת סה"כ"</mat-card-content
-      >
-      <button
-        mat-button
-        class="button"
-        routerLink="/report_employee_per_sector"
-      >
-        להרצת הדוח
-      </button>
-    </mat-card>
+    <div
+      class="card"
+      *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
+    >
+      <mat-card>
+        <mat-card-title class="title1">רשימת עובדים פר סקטור</mat-card-title>
+        <mat-card-subtitle class="title1">
+          מבקש הדוח: משה ממן</mat-card-subtitle
+        >
+        <mat-card-content>
+          דוח להצגת כמות עובדים פר סקטור +שורת סה"כ"</mat-card-content
+        >
+        <button
+          mat-button
+          class="button"
+          routerLink="/report_employee_per_sector"
+        >
+          להרצת הדוח
+        </button>
+      </mat-card>
+    </div>
+    <div
+      class="card"
+      *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
+    >
+      <mat-card>
+        <mat-card-title class="title1"> רשימת מאושפזים פר מחלקה</mat-card-title>
+        <mat-card-subtitle class="title1">
+          מבקש הדוח: משה ממן</mat-card-subtitle
+        >
+        <mat-card-content> כמות מאושפזים פר מחלקה</mat-card-content>
+        <button mat-button class="button" routerLink="/HospitalizationsList">
+          להרצת הדוח
+        </button>
+      </mat-card>
+    </div>
+    <div
+      class="card"
+      *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
+    >
+      <mat-card>
+        <mat-card-title class="title1"> רשימת משתמשים</mat-card-title>
+        <mat-card-subtitle class="title1">
+          מבקש הדוח: משה ממן</mat-card-subtitle
+        >
+        <mat-card-content> רשימת משתמשים</mat-card-content>
+        <button mat-button class="button" routerLink="/users">
+          להרצת הדוח
+        </button>
+      </mat-card>
+    </div>
+    <div
+      class="card"
+      *ngIf="
+        selectionChange === 'היחידה למניעת זיהומים' || selectionChange === 'הכל'
+      "
+    >
+      <mat-card>
+        <mat-card-title class="title1">רשימת מבודדים כללית</mat-card-title>
+        <mat-card-subtitle class="title1">
+          מבקש הדוח: משה ממן</mat-card-subtitle
+        >
+        <mat-card-content>
+          סה"כ מטופלים שהיו בבידוד +פילוח+שם מכניס לבידוד"</mat-card-content
+        >
+        <button mat-button class="button" routerLink="/Isolation">
+          להרצת הדוח
+        </button>
+      </mat-card>
+    </div>
   </div>
-  <div class="card" *ngIf="selectionChange === 'בידודים' || selectionChange === 'הכל'">
-    <mat-card>
-      <mat-card-title class="title1">רשימת מבודדים כללית</mat-card-title>
-      <mat-card-subtitle class="title1"> מבקש הדוח: משה ממן</mat-card-subtitle>
-      <mat-card-content>
-        סה"כ מטופלים שהיו בבידוד +פילוח+שם מכניס לבידוד"</mat-card-content
-      >
-      <button
-        mat-button
-        class="button"
-        routerLink="/Isolation"
-      >
-        להרצת הדוח
-      </button>
-    </mat-card>
-  </div>
-</div>
 </div>
