--- a/src/app/sql/sql.component.html
+++ b/src/app/sql/sql.component.html
@@ -42,7 +42,7 @@
       </mat-card>
     </div>
 
-    <div
+    <!-- <div
       class="card"
       *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
     >
@@ -62,7 +62,7 @@
           להרצת הדוח
         </button>
       </mat-card>
-    </div>
+    </div> -->
     <div
       class="card"
       *ngIf="selectionChange === 'משה' || selectionChange === 'הכל'"
