--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="example-spacer">
+<!-- <mat-toolbar class="example-spacer">
   <span>
     <button
       mat-fab
@@ -12,9 +12,9 @@
 
   <span>Moshe The King of Online</span>
 
-  <!-- <span class="example-spacer"></span> -->
+   <span class="example-spacer"></span> -->
   <!-- <button mat-raised-button (click)="openAddEditEmpForm()">Add Employee</button> -->
-</mat-toolbar>
+<!-- </mat-toolbar> -->
 
 <!-- <div class="body">
   <span
@@ -58,4 +58,4 @@
   <router-outlet></router-outlet>
 </div>
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
