--- a/src/app/devices-per-unit/devices-per-unit.component.html
+++ b/src/app/devices-per-unit/devices-per-unit.component.html
@@ -17,7 +17,7 @@
           >
             <input matInput [formControl]="getFormControl(column)" />
             <mat-select
-              *ngIf="column === 'unit'"
+              *ngIf="column === 'test'"
               [formControl]="getFormControl(column)"
             >
               <mat-option
