--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <span>Moshe The King of Online</span>
 
    <span class="example-spacer"></span> -->
-  <!-- <button mat-raised-button (click)="openAddEditEmpForm()">Add Employee</button> -->
+<!-- <button mat-raised-button (click)="openAddEditEmpForm()">Add Employee</button> -->
 <!-- </mat-toolbar> -->
 
 <!-- <div class="body">
@@ -53,9 +53,10 @@
     </button></span
   >
 </div> -->
-
+<!-- <app-sql></app-sql> -->
 <div class="body">
-  <router-outlet></router-outlet>
+  <router-outlet>
+  </router-outlet>
 </div>
 
 <!-- <app-footer></app-footer> -->
